# YOLOv8-KD

./: README.md  drawbox.py  heatmap.py  imhist.py  main.py  predict.py  pyproject.toml  requirements.txt  val.py
OtherKD/: CrossKD.py  ReviewKD.py  fgd.py
OtherKD/GHOST/: general.py
OtherKD/GHOST/GHOST_models/: SRyolo.py  common.py  experimental.py  quant_modules_dorefa.py  quantization.py
OtherKD/GHOST/utils/: datasets.py  general.py  loss.py  plots.py
OtherKD/GHOST/utils/distill/: CrossKD.py  FCFD.py  MSE.py  MyCriterion.py  My_Cross.py  Self_D.py  reviewkd.py
OtherKD/GHOST/utils/thop/: profile.py  utils.py
OtherKD/GHOST/utils/thop/vision/: basic_hooks.py
ultralytics/cfg/: default.yaml
ultralytics/engine/: trainer.py
ultralytics/models/yolo/detect/: val.py
ultralytics/nn/: tasks.py
ultralytics/utils/: metrics.py  plotting.py
