# pyproject.toml
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ultralytics", "OtherKD"]  # 只包含需要的包

[tool.setuptools.package-dir]
ultralytics = "ultralytics"  # 指定包路径
OtherKD = "OtherKD"

[project]
name = "YOLOv8-KD"
version = "0.1.0"